Closed
Bug 1627303
Opened 5 years ago
Closed 5 years ago
SmooshMonkey Compile broken: JSScript::Create
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
mozilla76
Tracking | Status | |
---|---|---|
firefox76 | --- | fixed |
People
(Reporter: mgaudet, Assigned: caroline)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
1:48.93 /home/matthew/unified/js/src/frontend/Frontend2.cpp:335:58: error: no viable conversion from 'const JS::ReadOnlyCompileOptions' to 'js::HandleScriptSourceObject' (aka 'Handle<js::ScriptSourceObject *>')
1:48.93 JSScript::Create(cx, cx->global(), options, sso, extent));
On f1252cfec7a1
Assignee | ||
Updated•5 years ago
|
Assignee: nobody → ccullen
Assignee | ||
Comment 1•5 years ago
|
||
Pushed by cbrindusan@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/91480d08786d
Fix JSScript::Create in SmooshMonkey. r=mgaudet
Comment 3•5 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 5 years ago
status-firefox76:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla76
Updated•5 years ago
|
Has Regression Range: --- → yes
Keywords: regression
You need to log in
before you can comment on or make changes to this bug.
Description
•