Bug 1627303 - Fix JSScript::Create in SmooshMonkey. r=mgaudet

Differential Revision: https://phabricator.services.mozilla.com/D69610

--HG--
extra : moz-landing-system : lando